[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.18"]

[project]
authors = [{email = "mahdi@avitai.bio", name = "Mahdi Shafiei"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "jax>=0.8.0",
  # JAX - upgraded to 0.8.0 for performance and NNX compatibility
  "flax>=0.12.0",
  # FLAX NNX - upgraded to 0.12.0 for modern nnx.Optimizer API
  "diffrax>=0.4.0",
  # differential equations
  "optax>=0.2.6",
  # optimization - upgraded for Flax 0.12.0 compatibility
  "optimistix>=0.0.10",
  # root finding, minimisation, fixed points, and least squares.
  "blackjax>=1.2.5",
  # MCMC and sampling
  "numpy>=1.24.0",
  # numerical computing
  "scipy>=1.10.0",
  # numerical computing
  "tensorly>=0.9.0",
  # tensor decomposition for neural operators
  "matplotlib>=3.7.0",
  # visualization
  "jaxtyping>=0.2.20",
  # type hints
  "beartype>=0.15.0",
  "orbax-checkpoint>=0.11.13",
  # checkpointing
  "distrax>=0.1.0,<0.2.0",
  # probabilistic programming
  "tfp-nightly==0.26.0.dev20251024",
  # probabilistic modeling and Bayesian inference - specific nightly for JAX 0.8.0 compatibility
  "tf-keras>=2.19.0",
  # Required by tensorflow-probability for variational inference
  "typing_extensions>=4.5.0",
  "pyyaml>=6.0.2",
  "tqdm>=4.67.1",
  # PyPI distribution for Avitai Artifex; imports remain under ``artifex``.
  "avitai-artifex>=0.1.0",
  "calibrax>=0.1.1",
  "datarax>=0.1.3"
]
description = "Opifex Computational Framework - JAX-native platform for scientific machine learning"
license = {file = "LICENSE"}
name = "opifex"
readme = "README.md"
requires-python = ">=3.11"
version = "0.2.0"

[project.optional-dependencies]
all = ["opifex[dev,docs,gpu,platform,profiling,scientific-data,test]"]
all-cpu = [
  # CPU-only installation with all development dependencies (no GPU)
  # Use for Linux CPU-only or macOS Intel systems
  "opifex[dev,docs,test,profiling]"
]
all-macos = [
  # macOS Apple Silicon with Metal acceleration
  # Use for macOS ARM64 systems with Metal GPU support
  "opifex[dev,docs,metal,test]"
]
cuda-dev = [
  # Comprehensive CUDA development environment
  # Includes all dev tools, testing, and GPU support
  # Automatically configured via scripts/fresh_cuda_setup.sh
  "opifex[dev,gpu]"
]
dev = [
  "build>=1.0.3",
  # Testing and coverage dependencies
  "coverage>=7.9.2",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=6.2.1",
  "pytest-env>=1.1.5",
  "pytest-json-report>=1.5.0",
  "pytest-randomly>=3.15",
  "pytest-split>=0.10.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  # Development tools
  "bandit>=1.7.5",
  "import-linter>=2.0",
  "ipykernel>=6.29.5",
  "jupytext>=1.16.0",
  "meshio>=5.3.0",
  "pip-audit>=2.6.0",
  "pre-commit>=4.2.0",
  "pydeps>=1.12.17",
  "pyright>=1.1.336",
  "python-dotenv>=1",
  "radon>=6.0",
  "rich>=14.0.0",
  "ruff>=0.1.5",
  "twine>=4.0.2"
]
docs = [
  "griffe>=1.7.3",
  "hippogriffe>=0.2",
  "mkdocs>=1.6.1",
  "mkdocs-include-exclude-files>=0.1",
  "mkdocs-ipynb>=0.1",
  "mkdocs-jupyter>=0.24",
  "mkdocs-material>=9.6.7",
  "mkdocstrings>=0.28.3",
  "mkdocstrings-python>=1.1.2",
  "pymdown-extensions>=10.14.3"
]
gpu = [
  # GPU dependencies - Complete CUDA stack installed locally in venv
  "jax[cuda12_local]==0.8.0",
  "jaxlib==0.8.0", # Core CUDA runtime and libraries
  "nvidia-cublas-cu12>=12.8",
  "nvidia-cuda-cupti-cu12>=12.8",
  "nvidia-cuda-nvcc-cu12>=12.8", # CUDA compiler (>=12.8 emits Blackwell sm_120 SASS; <12.8 PTX-JITs, ~1.6x slower)
  "nvidia-cuda-nvrtc-cu12>=12.8", # CUDA runtime compiler
  "nvidia-cuda-runtime-cu12>=12.8",
  "nvidia-cudnn-cu12>=9.8",
  "nvidia-cufft-cu12>=11.4",
  "nvidia-curand-cu12>=10.3",
  "nvidia-cusolver-cu12>=11.7",
  "nvidia-cusparse-cu12>=12.3",
  "nvidia-nccl-cu12>=2.20", # Additional CUDA ML libraries
  "nvidia-nvjitlink-cu12>=12.8",
  "nvidia-nvtx-cu12>=12.8"
]
metal = [
  # Metal acceleration for Apple Silicon Macs (M1/M2/M3+)
  # Provides GPU-like acceleration on macOS
  "jax-metal>=0.1.0"
]
neural-dft = [
  # Neural DFT specific dependencies for quantum chemistry
  "ase>=3.22.0", # Atomic Simulation Environment
  "pyscf>=2.3.0", # Python-based Simulations of Chemistry Framework
  "h5py>=3.8.0", # HDF5 for quantum data storage
  "netcdf4>=1.6.0" # NetCDF for scientific data
]
# Workshop-inspired comprehensive development environments
opifex-dev = [
  # Comprehensive Opifex development environment
  "opifex[dev,gpu,neural-dft,quantum-chemistry]"
]
pdebench = [
  # PDEBench competitor comparison — run reference PyTorch FNO alongside our JAX FNO
  # Install: uv pip install -e ".[pdebench]"
  "torch>=2.0.0",
  "h5py>=3.8.0",
  "hydra-core>=1.3.0",
  "pandas>=2.0.0"
]
platform = [
  # Platform serving and registry infrastructure
  "fastapi>=0.115.13",
  "uvicorn[standard]>=0.34.3",
  "redis>=6.2.0",
  "prometheus-client>=0.22.1",
  # Database for Neural Functional Registry
  "sqlalchemy>=2.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "psycopg2-binary>=2.9.0",
  "pgcli>=4.0.0"
]
profiling = [
  # Performance profiling and analysis dependencies
  "tensorflow>=2.20.0", # TensorFlow for JAX profiler integration
  "tensorboard-plugin-profile>=2.20.6" # TensorBoard profiler plugin for JAX profiling
]
quantum-chemistry = [
  # Quantum chemistry benchmarks and validation
  "qcelemental>=0.25.0", # Quantum chemistry data and constants
  "qcengine>=0.26.0", # Quantum chemistry program executor
  "basis-set-exchange>=0.9.0", # Basis set data
  "kfac-jax>=0.0.8" # K-FAC natural-gradient preconditioner for VMC
]
scientific-data = [
  # Scientific data loading — PDEBench HDF5, VTK mesh I/O, grain pipelines
  "grain>=0.2.3",
  "h5py>=3.8.0",
  "meshio>=5.3.0"
]
test = [
  # Async SQLite driver + greenlet (SQLAlchemy asyncio needs greenlet; it is pulled
  # in transitively on Linux but not on macOS) for the registry persistence tests.
  "aiosqlite>=0.20.0",
  "greenlet>=3.0.0",
  "beartype>=0.14.1",
  "coverage>=7.9.2",
  # Reference pseudo-spectral PDE solvers, used to cross-check
  # opifex.physics.spectral against an independent implementation.
  "exponax>=0.2.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=6.2.1",
  "pytest-env>=1.1.5",
  "pytest-json-report>=1.5.0",
  "pytest-randomly>=3.15",
  "pytest-split>=0.10.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0"
]

[project.scripts]
opifex-benchmark = "scripts.benchmark_runner:main"
opifex-check-compatibility = "scripts.check_opifex_compatibility:main"
# Phase 2 enhancements - workshop-inspired environment management
opifex-env-activate = "scripts.activate_opifex:main"
opifex-fresh-setup = "scripts.fresh_opifex_setup:main"
# Workshop-inspired utilities for enhanced Opifex development
opifex-gpu-test = "scripts.gpu_test_manager:main"
opifex-gpu-utils = "scripts.gpu_utils:main"
opifex-gpu-verify = "scripts.verify_opifex_gpu:main"
opifex-verify-examples = "scripts.verify_opifex_examples:main"

# Bandit security configuration
[tool.bandit]
# Exclude assert warnings in test files and scripts while maintaining security for production
exclude_dirs = ["tests", "scripts", "memory-bank", "documents", "custom_modes", ".cursor", "example_data"]
skips = [
  "B404",
  "B603",
  "B607",
  "B602",
  "B110",
  "B403",
  "B301",
  "B101" # mirrors global ruff S101 ignore (scientific code uses assert for shape/sanity checks); the control-flow asserts in src/opifex/uncertainty/markov/*_likelihoods.py are converted to explicit raises in a later task
] # Skip subprocess, assert, and pickle warnings for utility scripts and checkpoint management

# Allow assert statements in test files and scripts only
[tool.bandit.assert_used]
skips = ["*/tests/*", "tests/*", "*/scripts/*", "scripts/*"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/conftest.py", "*/__pycache__/*", "*/scripts/*", "*/examples/*", "*/example_data/*"]
parallel = true
# relative_files lets coverage data from the sharded CI runners (different
# absolute workspace paths across ubuntu/macOS) combine cleanly in the
# aggregation job; see .github/workflows/ci.yml.
relative_files = true
source = ["src/opifex"]

[tool.hatch]

[tool.hatch.build.targets.sdist]
include = ["src/opifex", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/opifex"]

[tool.hatch.metadata]
allow-direct-references = true

# Import architecture contracts (import-linter). Conservative, known-clean rules
# guarding the layering boundary; run via ``uv run lint-imports``.
[tool.importlinter]
root_package = "opifex"

[[tool.importlinter.contracts]]
forbidden_modules = ["opifex.training"]
name = "core does not import the top-level training package"
source_modules = ["opifex.core"]
type = "forbidden"

[[tool.importlinter.contracts]]
forbidden_modules = [
  "opifex.platform",
  "opifex.deployment",
  "opifex.mlops",
  "opifex.benchmarking",
  "opifex.visualization",
  "opifex.discovery"
]
name = "core does not import application/serving/infra layers"
source_modules = ["opifex.core"]
type = "forbidden"

[tool.interrogate]
fail-under = 95

[tool.opifex]

[tool.opifex.cuda]
auto_detect = true
documentation = "docs/setup/cuda-setup.md"
environment_file = ".opifex.env"
fallback_to_cpu = true
setup_scripts = ["setup.sh", "scripts/setup_env.py"]

# Pydocstyle documentation configuration
[tool.pydocstyle]
# Allow missing docstrings in certain contexts for scientific code
add-ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D202", # No blank lines allowed after function docstring (conflicts with black)
  "D212", # Multi-line docstring summary should start at the first line (conflicts with scientific style)
  "D401", # First line should be in imperative mood (relaxed for scientific descriptions)
  "D402", # First line should not be the function's "signature" (common in scientific docs)
  "D415" # First line should end with a period (relaxed for scientific descriptions)
]
convention = "google"
# Match only relevant directories, exclude test and utility directories
match-dir = "(?!tests|memory-bank|documents|custom_modes|.cursor|example_data).*"

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.venv",
  "**/node_modules",
  "**/.git",
  "**/build",
  "**/dist",
  "scripts",
  "memory-bank",
  "documents",
  "custom_modes",
  ".cursor",
  "examples", # Exclude example files from strict type checking
  "example_data", # Protected data directory
  "src/opifex/training/trainers/physics_informed_trainer.py" # Exclude due to return type issues
]
include = ["src", "tests"]
pythonPlatform = "Linux"
# Modern Python features
pythonVersion = "3.11"
reportArgumentType = "warning" # Relax argument type checking for scientific computing
reportAssignmentType = "warning" # Relax assignment type checking for scientific arrays
reportAttributeAccessIssue = "warning" # Relax attribute access for dynamic scientific objects
# Additional JAX/Scientific computing permissive settings
reportCallIssue = "warning" # Relax function call parameter matching for JAX
reportConstantRedefinition = "warning"
reportDuplicateImport = true
# JAX/Scientific computing specific - make more permissive
reportFunctionMemberAccess = false
# Allow for scientific computing patterns
reportGeneralTypeIssues = "warning"
reportImportCycles = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false
reportMissingImports = true
reportMissingParameterType = false # Lambda parameters in scientific code
reportMissingTypeStubs = false
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportOverlappingOverload = "error"
reportPrivateImportUsage = false # Allow matplotlib.pyplot.Figure imports
reportReturnType = "warning" # Relax return type checking for scientific functions
# Performance optimizations
reportSelfClsParameterName = false
reportUnknownArgumentType = false # JAX array operations
reportUnknownLambdaType = false # Lambda expressions in JAX
reportUnknownMemberType = false # JAX numpy functions often have complex types
reportUnknownParameterType = false # Scientific computing lambdas
reportUnknownVariableType = false # JAX transformations
reportUntypedBaseClass = false # Protocol inheritance
reportUntypedClassDecorator = false # dataclasses, attrs
reportUntypedFunctionDecorator = false # JAX transforms
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = true
reportUnusedVariable = "warning"
# Type checking configuration - relax for JAX ecosystem
typeCheckingMode = "standard" # JAX-compatible standard-mode gate (enforces reportPossiblyUnboundVariable)
venv = ".venv"
venvPath = "."

# Testing configuration
[tool.pytest.ini_options]
addopts = [
  "-vv",
  "--tb=short",
  "--strict-markers",
  "--disable-warnings",
  "--cov=src/opifex",
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
  "--timeout=300",
  "--json-report",
  "--json-report-file=temp/test-results.json",
  "--json-report-indent=2",
  # Shows extra test summary info: f (failed), E (error), s (skipped), x (xfailed), X (xpassed), w (pytest-warnings), a (all)
  "-rfsxXw"
]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:jax.*",
  "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated:DeprecationWarning",
  "ignore::UserWarning:jax._src.xla_bridge",
  "ignore:.*cuSPARSE.*",
  "ignore:.*CUDA-enabled jaxlib.*"
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"') - automatically detected via conftest.py",
  "gpu_required: marks tests as requiring GPU (will fail if GPU unavailable)",
  "cuda: marks tests that specifically test CUDA functionality",
  "cpu: marks tests that should run on CPU only",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "benchmark: marks tests as performance benchmarks (requires pytest-benchmark)",
  "e2e: marks tests as end-to-end tests",
  "performance: marks tests as performance tests",
  "contract: marks tests as contract tests",
  "training: marks tests related to training infrastructure",
  "physics_informed: marks tests for physics-informed training",
  "workshop_integration: marks tests for workshop integration",
  "checkpoint: marks tests for checkpoint management",
  "orbax: marks tests using Orbax backend",
  "distributed: marks tests requiring multi-device or distributed setup"
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.pytest-env]
# D: prefix = set as default only (don't override existing env vars from activate.sh/.opifex.env)
"D:JAX_ENABLE_X64" = "0"
"D:TF_CPP_MIN_LOG_LEVEL" = "1"
"D:XLA_PYTHON_CLIENT_MEM_FRACTION" = "0.75"
"D:XLA_PYTHON_CLIENT_PREALLOCATE" = "false"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 100
src = ["src/opifex"]
target-version = "py311" # Enforce Python 3.11+ features

[tool.ruff.lint]
# Exclude files
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "memory-bank",
  "documents",
  "custom_modes",
  ".cursor",
  "example_data"
]
# Additional type checking rules
extend-select = ["UP", "BLE"] # Enforce modern Python syntax + Rule 6 (no blind except Exception)
fixable = ["ALL"]
ignore = [
  # Scientific computing and JAX-specific ignores
  "A003", # Class attribute shadows builtin (SQLAlchemy id columns)
  "E402", # Module level import not at top of file (JAX imports)
  "E721", # Do not compare types (JAX dtype comparisons)
  "E731", # Do not assign a lambda expression (JAX functional programming)
  "E741", # Ambiguous variable name (mathematical variables)
  "F722", # Forward annotation syntax error (JAX typing)
  "S101", # Use of assert (common in scientific computing)
  "PLR2004", # Magic value used in comparison (constants)
  "NPY002", # Replace legacy np.random.* random number generators
  "COM812", # Missing trailing comma (conflicts with formatter)
  "ISC001", # Single line implicit string concatenation (conflicts with formatter)
  # Mathematical variable naming exceptions for scientific computing
  "N803", # Argument names like R, T are standard in mathematics/physics
  "N806", # Variable names like Q, R, K, L are standard in mathematics
  # Exception handling patterns acceptable in scientific computing
  "TRY003", # Long messages in exceptions (descriptive scientific errors)
  "TRY300", # Consider else block (scientific error handling patterns)
  # Function defaults in scientific computing
  "B008", # Function calls in defaults (acceptable for initializers)
  # Security warnings in utility scripts
  "S602", # subprocess with shell=True (utility scripts)
  "S603", # subprocess call (utility scripts)
  "S607", # subprocess partial path (utility scripts)
  "S110", # try-except-pass (GPU/hardware detection)
  # Test-specific patterns
  "PT003", # pytest scope function (explicit is better)
  "PT018", # Complex assertions (scientific test validation)
  "PT028", # pytest parameter default argument (utility scripts)
  # Documentation and style for scientific code
  "RUF002", # Ambiguous Unicode (mathematical symbols)
  "SLF001", # Private member access (scientific library internals)
  "ERA001", # Commented code (scientific development)
  # Path operations in scripts
  "PTH101", # os.chmod (scripts)
  "PTH123", # open() (legacy scripts)
  # Scientific computing import patterns - CRITICAL FOR OPTIONAL DEPENDENCIES
  "PLC0415" # Import outside top-level (conditional/optional imports pattern)
]
# Enable more comprehensive rule sets for modern Python
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "UP", # pyupgrade (modern Python idioms)
  "I001", # isort
  "N", # pep8-naming
  "YTT", # flake8-2020
  "S", # flake8-bandit (security)
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "COM", # flake8-commas
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PIE", # flake8-pie
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT", # flake8-pytest-style
  "Q", # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "ERA", # eradicate
  "PGH", # pygrep-hooks
  "PL", # pylint
  "TRY", # tryceratops
  "NPY", # NumPy-specific rules
  "RUF", # Ruff-specific rules
  "C901" # mccabe cyclomatic complexity (Rule 2 / SRP)
]
unfixable = []

[tool.ruff.lint.flake8-type-checking]
# Enforce TYPE_CHECKING imports for better performance
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["opifex"]
known-third-party = ["jax", "flax", "numpy", "scipy"]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.mccabe]
max-complexity = 10 # Rule 2 (SRP): functions above this must be decomposed

# Per-file ignores for development scripts
[tool.ruff.lint.per-file-ignores]
# Example files with print statements for demonstration
"examples/*" = [
  "T201", # Print statements (examples need output)
  "F841", # Unused variables (demonstrations may not use all variables)
  "E501", # Long lines in example comments
  "BLE001", # Broad except acceptable in demonstration code
  "C901", # Demonstration scripts may inline multi-stage walkthroughs
  "PLR0915", # main() inlines a full example walkthrough (load, train, eval, plot)
  "PLR0912", # main() inlines the branchy walkthrough (config switches, eval/plot paths)
  "ARG001", # Demonstration callbacks/closures keep interface params
  "ARG005", # Demonstration lambdas keep interface params
  "PLR0913" # Walkthroughs configure models/loaders with one kwarg per setting
]
"scripts/*" = [
  "E501", # Line too long (development scripts can be longer)
  "PLR0912", # Too many branches (complex utility scripts)
  "PLR0911", # CLI entry points dispatch over many subcommands/return codes
  "PLR0915", # CLI entry points inline full setup/dispatch/teardown
  "RUF013", # Implicit Optional (legacy script patterns)
  "PTH113", # os.path.isfile (legacy compatibility)
  "PTH112", # os.path.isdir (legacy compatibility)
  "PTH110", # os.path.exists (legacy compatibility)
  "SIM102", # Nested if statements (readability in scripts)
  "T201", # Print statements (utility scripts need output)
  "BLE001", # Broad except acceptable in utility scripts
  "ARG001", # Utility-script callbacks/closures keep interface params
  "PLR0913" # Utility scripts wire many CLI/config options through one function
]
# Core library files with necessary user feedback
"src/opifex/benchmarking/evaluation_engine.py" = [
  "T201" # Print statements for evaluation warnings and feedback
]
"src/opifex/core/gpu_optimization.py" = [
  "T201" # Print statements for benchmark results and user feedback
]
# Physics-loss and conservation interfaces carry the full residual context
# (network, coordinates, targets, rngs) mandated by the loss-strategy protocol.
"src/opifex/core/physics/losses.py" = [
  "PLR0913" # Physics-loss interface carries the full residual evaluation context
]
# Core library files with scientific computing patterns
"src/opifex/core/problems.py" = [
  "T201", # Print statements for debugging in development
  "E722", # Bare except in scientific fallback patterns
  "E501", # Long lines for scientific comments
  "RET504" # Scientific computing return patterns
]
# Gaussian-integral primitives in the quantum MMD/RI engines: every argument is
# a physical quantity (angular momenta, exponents, centers, charges). The
# signatures follow the Helgaker McMurchie-Davidson recurrences verbatim.
"src/opifex/core/quantum/_eager_reference.py" = [
  "PLR0913" # McMurchie-Davidson primitive integrals: one arg per physical quantity
]
"src/opifex/core/quantum/_flat_harness.py" = [
  "PLR0913" # Flattened primitive-integral kernel: one arg per shell quantum number
]
"src/opifex/core/quantum/_flat_mmd.py" = [
  "PLR0913" # McMurchie-Davidson primitive integrals: one arg per physical quantity
]
"src/opifex/core/quantum/_ri.py" = [
  "PLR0913" # Resolution-of-identity three-center primitives: one arg per physical quantity
]
"src/opifex/core/quantum/operators.py" = [
  "B028", # Warning stacklevel in scientific context
  "E501" # Long scientific comments
]
"src/opifex/core/training/strategies/mixed_precision.py" = [
  "PLR0913" # nnx training-strategy constructor: one kwarg per precision setting
]
"src/opifex/core/training/strategies/multilevel/multilevel_fno.py" = [
  "PLR0913" # FNO-hierarchy factory mirrors the per-level operator hyperparameters
]
# Data-loader factories expose one keyword per loader/sampler/transform knob;
# they are always called by keyword and never positionally.
"src/opifex/data/loaders/factory.py" = [
  "PLR0913" # PDE data-loader factories: one kwarg per loader/sampler/transform option
]
"src/opifex/data/sources/rmd17_source.py" = [
  "PLR0913" # rMD17 loader factory: one kwarg per dataset/loader option
]
# Kubernetes manifest fields map one-to-one onto the rendered quota spec.
"src/opifex/deployment/kubernetes/resource_manager.py" = [
  "PLR0913" # ResourceQuota manifest: one kwarg per quota field
]
# PLR0913 (>8 args) scoping.
#
# Flax NNX modules and operator/wavefunction constructors are canonically
# configured through many keyword-only hyperparameters; upstream Flax layers
# (nnx.Linear, nnx.MultiHeadAttention) themselves take ~16. Their paired
# ``create_*`` factories mirror the same constructor surface. Grouping these
# into a config object would obscure, not clarify, the architecture.
"src/opifex/neural/**/*.py" = [
  "PLR0913" # nnx.Module constructors / operator factories: one kwarg per hyperparameter
]
"src/opifex/neural/bayesian/blackjax_integration.py" = [
  "T201" # Print statements for MCMC fallback warnings
]
"src/opifex/optimization/production.py" = [
  "PLR0913" # nnx.Module assembling production subsystems: one kwarg per component
]
# Domain exceptions intentionally named for the concept they model
# (FunctionalNotFound, AccessDenied, ...) rather than an -Error suffix.
"src/opifex/platform/registry/exceptions.py" = [
  "N818" # Exception names model domain conditions, not an Error suffix
]
# Mathematical/algorithmic signatures where each argument is a distinct,
# named quantity of the underlying numerical method.
"src/opifex/uncertainty/inference_backends/_advi_algorithm.py" = [
  "PLR0913" # ADVI ELBO step: one arg per variational-inference quantity
]
"src/opifex/uncertainty/inference_backends/_pathfinder_algorithm.py" = [
  "PLR0913" # Pathfinder approximation: one arg per algorithm quantity
]
"src/opifex/uncertainty/markov/markov_pep.py" = [
  "PLR0913" # Markov power-EP GP fit: one arg per state-space/likelihood quantity
]
"src/opifex/uncertainty/markov/markov_pep_likelihoods.py" = [
  "PLR0913" # Markov power-EP GP fit: one arg per state-space/likelihood quantity
]
"src/opifex/uncertainty/monitoring/reliability_report.py" = [
  "PLR0913" # Reliability-report assembler: one optional kwarg per UQ metric
]
"src/opifex/uncertainty/objectives.py" = [
  "PLR0913" # Objective assembled from its named loss components
]
"src/opifex/uncertainty/sbi/_base.py" = [
  "PLR0913" # MCMC posterior-predictive: one arg per sampler quantity
]
"src/opifex/uncertainty/scientific/_specialised.py" = [
  "PLR0913" # Perturbed-step solver: one arg per perturbation quantity
]
"src/opifex/uncertainty/statespace/cakf.py" = [
  "PLR0913" # Continuous-time Kalman update: one arg per state-space quantity
]
# Add visualization complexity ignores to existing per-file-ignores section
"src/opifex/visualization/**/*.py" = [
  "PLR0912", # Too many branches - acceptable for comprehensive plotting
  "PLR0915", # Too many statements - acceptable for comprehensive plotting
  "PLR0913" # Plot helpers expose one keyword per styling knob (title/labels/cmap/vmin/vmax/figsize/save_path)
]
# Test files with scientific computing patterns
"tests/*" = [
  "T201", # Print statements in tests for debugging
  "E501", # Long lines in test descriptions
  "RUF003", # Mathematical symbols in comments
  "RET504", # Test return patterns
  "BLE001", # Broad except acceptable in test helpers and fixtures
  "C901", # Test bodies may exercise many branches/parametrisations inline
  "ARG001", # Mock callbacks / parametrize ids / JAX-callback fakes keep interface params
  "ARG002", # Stub method overrides keep the interface signature they replace
  "ARG005", # Test lambdas keep interface params (e.g. nnx callbacks, diffrax rhs)
  "PLR0913" # Test factories/builders configure fixtures with many explicit kwargs
]
"tests/conftest.py" = [
  "T201", # Print statements (test configuration logging)
  "E501" # Long lines in test configuration
]
"tests/core/*" = [
  "T201", # Print statements in core tests
  "E501", # Long test descriptions
  "RUF003" # Mathematical symbols
]

[tool.ruff.lint.pylint]
max-args = 8 # Allow more arguments for scientific functions

[tool.ruff.lint.pyupgrade]
# Keep dict/list union syntax for modern Python
keep-runtime-typing = false

# UV Configuration for optimal performance
[tool.uv]
# Security pins for vulnerable transitive dependencies (advisories with a fix).
constraint-dependencies = [
  "werkzeug>=3.1.6", # CVE-2026-27199
  "aiohttp>=3.14.0", # cross-origin redirect + untrusted-data deserialization
  "tornado>=6.5.6", # out-of-bounds memory access
  "cryptography>=48.0.1", # GHSA-537c-gmf6-5ccf
  "python-multipart>=0.0.31", # CVE-2026-53538/53539/53540
  "starlette>=1.3.1", # CVE-2026-54282/54283
  "pip>=26.1.2", # PYSEC-2026-196
  "bleach>=6.4.0" # GHSA-gj48-438w-jh9v / GHSA-8rfp-98v4-mmr6 / GHSA-g75f-g53v-794x (6.3.0-only)
]
python-preference = "only-managed"

# Configure for GPU package installation
[tool.uv.pip]
find-links = ["https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]
